# Fullstack

./: .gitignore  index.html  login.html  signup.html
backend/: Cargo.toml
backend/src/: main.rs  models.rs  utils.rs
backend/src/handlers/: admin.rs  auth.rs  books.rs  mod.rs
css/: styles.css
js/: app.js
